Harden CORS and update production FRONTEND_URL